<resources>
    <string name="app_name">Student Stressed</string>
    <string name="link"><a href="http://www.psychologiepraktijk-vivir.nl">Website</a></string>
    <string name="Medi">Meditation</string>
    <string name="meditation1">1-Minute Session</string>
    <string name="meditation2">5-Minute Session</string>
    <string name="meditation3">10-Minute Session</string>
    <string name="MeditationTip">Meditation Tips</string>
    <string name="explanation">Here are some tips that help with stress: </string>
    <string name="tips">Focussing on your breathing can reduce your stress levels. Maybe our breathing exercise will help.</string>
    <string name="anxietyHelp">To help with your exam anxiety we have the following options</string>
    <string name="tip7">- Don´t be scared if it feels like you’re doing it wrong, there is nothing to do wrong</string>
    <string name="tip2">- Start with a few deep breaths to calm the body</string>
    <string name="tip3">- Slowly reintroduce movement after meditating</string>
    <string name="tip4">- Always acknowledge your emotions</string>
    <string name="tip5">- Make sure to breathe naturally during meditation</string>
    <string name="tip6">- Before you start: create a meditative space for yourself and get comfortable there</string>
    <string name="distractionExplanation">To see some funny jokes, tap on the Jokes button. To see relaxing/funny images tap on the Images button: </string>
    <string name="BreathingExplanation">- Relax your neck and shoulders while doing the breathing exercises. \n\n- Choose a comfortable seated position, for example laying down or sitting comfortable\n\n - Breathe in and out through your nose\n\n - Close your eyes and relax your face \n\n - Keep your breath slow and steady while breathing out\n\n - Wear comfortable clothes\n\n - Keep your spine straight and avoid straining the body</string>

    <string-array name="jokes">
        <item>What do you call a fake noodle?\n An impasta!</item>
        <item>What do you call cheese that isn`t yours?\n Nacho Cheese. </item>
        <item>What does a baby computer call it`s father?\n Data! </item>
        <item>Why did the golfer change his pants?\n Because he got a hole in one!</item>
        <item>How do you make holy water?\n You boil the hell out of it. </item>
        <item>What do you get when you cross a snowman with a vampire?\n Frostbite.</item>
        <item>What`s at the bottom of the ocean and shivers?\n A nervous wreck!</item>
        <item>Why don`t they play poker in the jungle?\n Too many cheetahs.</item>
        <item>When is your door not actually a door?\n When it`s actually ajar.</item>
    </string-array>

    <string-array name="names">
        <item>Vivi Luijckx</item>
        <item>Anne-Lena de Vletter</item>
        <item>Alexandra Dullaart</item>
        <item>Robert van den Bosch</item>
        <item>Niels Nederveld</item>
        <item>Irene Kurpershoek</item>
        <item>Amrah van Til</item>
        <item>Loes Dols</item>
    </string-array>

    <string-array name="location">
        <item>Nijmegen</item>
        <item>Arnhem</item>
        <item>Amsterdam</item>
        <item>Rotterdam</item>
        <item>Utrecht</item>
        <item>Leiden</item>
        <item>Groningen</item>
        <item>Maastricht</item>
    </string-array>

    <string-array name="number">
        <item>06-50244759</item>
        <item>088-6463348</item>
        <item>085-4014720</item>
        <item>06-14400109</item>
        <item>06-27053020</item>
        <item>06-10723426</item>
        <item>06-44362723</item>
        <item>06-24943248</item>
    </string-array>

    <string-array name="links">
        <item>http://www.psychologiepraktijk-vivir.nl</item>
        <item>https://www.mindfit.nl/locatie/locatie-arnhem</item>
        <item>https://www.psyned.nl/psycholoog/noord-holland/amsterdam/alexandra-dullaart/</item>
        <item>https://praktijkvandenbosch.nl/</item>
        <item>https://nielsnederveld.nl/</item>
        <item>https://www.psycholoogleiden-kurpershoek.nl/</item>
        <item>https://www.inverbinding.nu/nl</item>
        <item>https://www.psychologiemaastricht.nl/</item>
        <item>link</item>
    </string-array>
    <string name="title_activity_breathing_exercise">BreathingExercise</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>