<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeditationOptions">

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meditation3"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="482dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="230dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:text="@string/meditation1"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:layout_editor_absoluteX="81dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="230dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/meditation2"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MeditationTip"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="602dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="132dp"
        android:layout_height="131dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/puppy" />

</androidx.constraintlayout.widget.ConstraintLayout>